@@ -250,6 +250,7 @@ void ValidateClientDataRow(
                 expectedName,
                 actualName);
         }
+        ValidateValueType(row.BeginKeys()[index], schema, index, /*typeAnyAcceptsAllValues*/ false);
         ValidateKeyValue(row.BeginKeys()[index]);
     }
 
@@ -333,6 +334,10 @@ void ValidateDuplicateAndRequiredValueColumns(
     const TTimestamp* writeTimestamps,
     int writeTimestampCount)
 {
+    if (writeTimestampCount == 0) {
+        return;
+    }
+
     auto& columnSeen = *columnPresenceBuffer;
     YT_VERIFY(columnSeen.size() >= schema.GetColumnCount());
     std::fill(columnSeen.begin(), columnSeen.end(), 0);
